# glueme

./: .gitignore  Procfile  devrun.py  glueme.nginx  glueme.service  gluemenginx.txt  herokupush.sh  herokurun.py  mainrun.py  nginx.conf  pyproject.toml  readme.md  readme.txt  requirements.txt  test.py
deploy/: gluemenginx.txt
glueme/api/: depends.py  router.py
glueme/api/routes/: auth.py  forgotpass.py  profile.py  profiletag.py  registration.py  tag.py
glueme/api/schemas/: code.py  forgotpass.py  registration.py  user.py
glueme/app/: asgi.py  createapp.py  db.py  events.py  settings.py
glueme/models/: models.py
glueme/services/: code.py  tag.py  user.py
glueme/utils/: dtutc.py  emailsender.py  initloguru.py  mailgun.py
src/: main.py
src/api/: depends.py  router.py
src/api/routes/: auth.py  forgotpass.py  profile.py  profiletag.py  registration.py  tag.py
src/api/schemas/: auth.py  forgotpass.py  registration.py  tag.py  token.py  user.py
src/app/api/: dependencies.py  deps.py  utils.py
src/app/api/routes/: __init__.py  auth.py  code.py  codes.py  profile.py  profiletag.py  registration.py  tags.py  users.py
src/app/api/schemas/: code.py  tag.py  token.py  user.py
src/core/: events.py  middleware.py  settings.py
src/db/: base.py  models.py
src/glueme/: createapp.py  db.py  events.py  models.py
src/services/: code.py  tag.py  tags.py  user.py
src/utils/: asgi.py  emailsender.py  normalizer.py
