[tool.poetry]
name = "glueme"
version = "0.1.0"
description = ""
authors = ["Arsen Sabirzyanov <sabarsenrash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
databases = "^0.5.5"
fastapi = "^0.75.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
psycopg2-binary = "^2.9.3"
yadisk-async = "^1.3.3"
asyncpg = "^0.25.0"
pytz = "^2021.3"
uvicorn = "^0.17.5"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
multipledispatch = "^0.6.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
recreatetables = "src.glueme.models:recreate_tables"

